cluster/apps/monitoring/grafana/ingress-route.yaml
---
apiVersion: ingressroutes.traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "grafana-${SECRET_DOMAIN/./-}-tls"
